--- a/project/angularClient/src/styles.scss
+++ b/project/angularClient/src/styles.scss
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-image: linear-gradient(180deg, #eee, #fff 100px, #fff);
+}
+
+.container {
+  max-width: 960px;
+}
+
+.pricing-header {
+  max-width: 700px;
+}
+
+input.transparent-input{
+  background-color:transparent !important;
+  border:none !important;
+  box-shadow:none !important;
+  outline: none;
+}
