--- a/project/angularClient/src/app/app.component.html
+++ b/project/angularClient/src/app/app.component.html
@@ -114,6 +114,8 @@
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
-    <p>Try scrolling the rest of the page to see this option in action.</p>
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let task of tasks">{{task.title}}</li>
+    </ul>
   </div>
 </div>
