--- a/project/angularClient/src/app/app.component.html
+++ b/project/angularClient/src/app/app.component.html
@@ -66,7 +66,8 @@
                   </path>
                 </svg> 23:39:00</li>
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-outline-primary">Start Session</button>
+            <button type="button" class="w-100 btn btn-lg btn-outline-primary" (click)="startSession()">Start
+              Session</button>
           </div>
         </div>
       </div>
@@ -75,12 +76,12 @@
 
   </div>
 </header>
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- Create Modal -->
+<div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">New Project</h5>
+        <h5 class="modal-title" id="createModalLabel">New Project</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -88,11 +89,29 @@
           <label for="displayName" class="form-label">Project Name</label>
           <input type="text" class="form-control" id="displayName" [(ngModel)]="displayName" name="displayName"
             placeholder="">
-          {{displayName}}
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" (click)="saveNew()">Save</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- session Modal -->
+<div class="modal fade" id="sessionModal" tabindex="-1" aria-labelledby="sessionModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="sessionModalLabel">Session Started</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <h1 class="display-1">{{timeDisplay}}</h1>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
         <button type="button" class="btn btn-primary" (click)="saveNew()">Save</button>
       </div>
     </div>
