--- a/project/angularClient/src/app/app.component.html
+++ b/project/angularClient/src/app/app.component.html
@@ -112,7 +112,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" (click)="saveNew()">Save</button>
+        <button type="button" class="btn btn-primary" (click)="saveSession()">Save</button>
       </div>
     </div>
   </div>
