--- a/project/angularClient/src/app/app.component.html
+++ b/project/angularClient/src/app/app.component.html
@@ -66,7 +66,7 @@
                   </path>
                 </svg> 23:39:00</li>
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-outline-primary" (click)="startSession()">Start
+            <button type="button" class="w-100 btn btn-lg btn-outline-primary" (click)="startSession(goal.id)">Start
               Session</button>
           </div>
         </div>
