--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -3,7 +3,7 @@
   <base href="/">
   <title>geterdone.io</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-<style>body{background-image:linear-gradient(180deg,#eee,#fff 100px,#fff);}.container{max-width:960px;}</style><link rel="stylesheet" href="styles.f8bc8d0b08384ea49ee7.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.f8bc8d0b08384ea49ee7.css"></noscript></head>
+<link rel="stylesheet" href="styles.f8bc8d0b08384ea49ee7.css"></head>
 
 <body>
   <div class="container py-3">
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
   </div>
-<script src="runtime.35f159139dca69715587.js" defer></script><script src="polyfills.f2a8c7afd3a695441d93.js" defer></script><script src="main.0afeaccef859a08ed445.js" defer></script>
+<script src="runtime.35f159139dca69715587.js" defer></script><script src="polyfills.f2a8c7afd3a695441d93.js" defer></script><script src="main.4811da294912d6e73a69.js" defer></script>
 
 
 </body></html>
